--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Youtubeplayer2.0 : " />
-
-
-    <title>Youtubeplayer2.0</title>
-  </head>
-
-  <body>
-
-	<h1>checking commit to gh-pages</h1>
-    
-
-  </body>
+    <head>
+        <meta charset='utf-8' />
+        <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+        <meta name="description" content="Youtubeplayer2.0 : " />
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" />
+        <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="javascripts/main.js"></script>
+        <title>Youtubeplayer2.0</title>
+    </head>
+    <body>
+        <!-- search bar -->
+        <div id = "container_top">
+            <input id = "search_bar" type = "text" placeholder = "Search"/>
+        </div>
+        <!-- left nav -->
+        <div id = "left_nav">
+            <div id= "new_playlist_container">
+                <div id = "add_playlist"> New Playlist</div>
+                <input type = "text" id="new_playlist_name"/>
+            </div>
+            <div id = "playlists">
+            </div>
+        </div>
+    </body>
 </html>
