add skeleton divs for middle container and youtube player view

--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
             <div id = "playlists">
             </div>
         </div>
+        <!-- middle container -->
+        <div class = "middle_container" id = "playlist_view"></div>
+        <div class = "middle_container" id = "search_results_view"></div>
+        <!-- youtube player view -->
+        <div id = "video_player_container"></div>
     </body>
 </html>
