--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Youtubeplayer2.0 : " />
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" />
         <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
-        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.3.1/underscore-min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
         <script src="javascripts/main.js"></script>
@@ -32,5 +32,15 @@
         <div class = "middle_container" id = "search_results_view"></div>
         <!-- youtube player view -->
         <div id = "video_player_container"></div>
+        <!-- templates -->
+        <script type="text/template" id = "search_result_template">
+			<img class = "thumbnail" src = "<%= thumbnail %>" />
+			<div class="reflection">
+      			<img class="reflection_thumbnail" src = "<%= thumbnail %>"/>
+      			<div class="overlay"></div>
+   			</div>
+   			<div class = "duration"><%= duration %></div>
+			<div class = "title"><%= title %></div>
+		</script>
     </body>
 </html>
