--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="description" content="Youtubeplayer2.0 : " />
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
         <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.3.1/underscore-min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="javascripts/backbone.localStorage.js"></script>
         <script src="javascripts/main.js"></script>
         <title>Youtubeplayer2.0</title>
@@ -33,17 +34,6 @@
         <div class = "middle_container" id = "search_results_view"></div>
         <!-- youtube player view -->
         <div id = "video_player_container"></div>
-        <!--<ul id ="menu">
-        	<li><a href="#">Item 1</a></li>
-        	<li><a href="#">Item 2</a>
-        		<ul>
-        			<li><a href="#">item 2-1</a></li>
-        		</ul>
-        	</li>
-        </ul>
-        <script>
-        	
-        </script>-->
         <!-- templates -->
         <!-- search result template -->
         <script type="text/template" id = "search_result_template">
@@ -57,11 +47,9 @@
 		</script>
 		<!-- playlist template -->
 		<script type="text/template" id="playlist_template">
-		    <div class='playlistItem'>
-		    	<div class="name"><%= name %></div>
-		    	<div class = "delete">
-		    	</div>
-		    </div>
+	    	<div class="name"><%= name %></div>
+	    	<div class = "delete">
+	    	</div>
 		</script>
     </body>
 </html>
