--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="description" content="Youtubeplayer2.0 : " />
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" />
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
+        <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
         <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.3.1/underscore-min.js"></script>
@@ -50,6 +50,25 @@
 	    	<div class="name"><%= name %></div>
 	    	<div class = "delete">
 	    	</div>
+		</script>
+		<!--playlist info no songs -->
+		<script type="text/template" id = "playlist_info_template_no_songs">
+			<div class="playlist_thumbnail">
+				<img src = "images/nosongs.png" /></div>
+			</div>
+		</script>
+		<!--playlist info with songs -->
+		<script type="text/template" id = "playlist_info_template">
+			<div class="playlist_thumbnail">
+				<img class = "playlist_individual_thumb" src = "<%= thumbnail1 %>" />
+			</div>
+		</script>
+		<!--playlist general info -->
+		<script type ="text/template" id ="playlist_info_template_general">
+			<div id ="other_info">
+				<div id ="playlist_title"><%=title%></div>
+				<div id ="playlist_time"><%=noOfSongs%> songs, <%=duration%></div>
+			</div>
 		</script>
     </body>
 </html>
