refactor playlist view

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <!-- song in playlist -->
         <script type = "text/template" id = "playlist_song">
           <div>
-            <img  class="small_thumb" src = "<%= thumbnail %>" /> <%=track%>
+            <div class="song">
+              <img  class="small_thumb" src = "<%= thumbnail %>" /> <%=track%>
+            </div>
             <div class="delete"/>
           </div>
         </script>
