--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,7 @@
         <meta name="description" content="Youtubeplayer2.0 : " />
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" />
         <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
-        <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://ajax.cdnjs.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.3.1/underscore-min.js"></script>
-        <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
-        <script type="text/javascript" src="javascripts/libs/backbone.localStorage.js"></script>
-        <script src="javascripts/main.js"></script>
+        <script data-main="javascripts/youtubeplayer.js" src="javascripts/libs/require/require.js"></script>
         <title>Youtubeplayer2.0</title>
     </head>
     <body>
