--- a/index2.html
+++ b/index2.html
@@ -69,6 +69,7 @@
           <div>
             <div class="song">
               <img  class="small_thumb" src = "<%= thumbnail %>" /> <%=track%>
+              <div class="song_duration"> <%=duration%> </div>
             </div>
             <div class="delete"/>
           </div>
