bug fixes for modes

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <!--playlist modes-->
         <script type ="text/template" id ="playlist_modes_template">
          <div id ="modes">
-            <div class = "mode" data-mode="shuffle" >Shuffle</div>
-            <div class = "mode" data-mode="repeat_one" >Repeat One</div>
-            <div class = "mode" data-mode="repeat_all" >Repeat All</div>
+            <div class = "mode" data-mode="0" >Shuffle</div>
+            <div class = "mode" data-mode="1" >Repeat One</div>
+            <div class = "mode" data-mode="2" >Repeat All</div>
            </div>
         </script>
         <!-- song in playlist -->
